--- a/index.html
+++ b/index.html
@@ -1,33 +1,19 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1 class="container bg-primary p-3">Hello, world!</h1>
-    <div class="container-fluid bg-danger p-3 mt-4">Hello</div>
-    <!-- 字與背景格 -->
-
-    <div class="container mt-4">
-        <div class="row"> 
-          <!-- 4. 大量區塊，只能均分 <div class="row 加row-col-2">   -->
-            <div class="col-md-12 col-xl  bg-primary p-5">1</div>
-            
-            <div class="col-md bg-danger p-5">1</div>
-            <div class="col-md bg-warning p-5">1</div>
-            <!-- ｍｄ－? =分等分 總共12 -->
-            <!-- -md斷點代碼 -->
-            <!-- 分欄 -->
-            <!-- 2.也可分兩個row，變兩段，但無法兩部分混合用，適合兩段不同部分的內容 -->
-            <!-- 3.   <div class="d（display)-none(手機消失) d-md-block（出現） w-100(放哪切哪)"</div>-->
-            
-
-        </div>
-
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container" >
+        <div class="item item-1">1</div>
+        <div class="item item-2">2</div>
+        <div class="item item-3">3</div>
+        <div class="item item-4">4</div>
+        <div class="item item-5">5</div>
+        <div class="item item-6">6</div>
+     </div>
+</body>
 </html>
