--- a/index.html
+++ b/index.html
@@ -72,15 +72,13 @@
                 <div class="col-1"></div>
             </div>
         </div>
-       
     </div>
 
     <!-- 輪播照片 -->
 
     <div class="container1 my-5 ">
         <div class="row">
-            <div class="col-1">
-            </div>
+            <div class="col-1"></div>
             <div class="col-5">
                 <div id="carouselExampleRide" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -139,7 +137,6 @@
                 <p>06 2369765</p><br>
                 <h4>台東太麻里店</h4>
                 <p>籌備中</p>
-        
             </div>
 
             <div class="col-1">
@@ -315,16 +312,11 @@
                 <h6>06 2369765</h6>
             </div>
         </div>
-
-
     </div>
 
-
-
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-        </script>
+    </script>
 </body>
 
 </html>
