--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="enter button">
-            <a class="btn btn-light" href="index.html" role="button">Enter</a>
+            <a class="btn btn-light" href="index2.html" role="button">Enter</a>
         </div>
         <div class="button3">
             <button class="btn btn-light" type="button" data-bs-toggle="collapse"
